Instruction level tracer implemented

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -116,6 +116,7 @@ SUBDIR=	${SUBDIR_ORDERED} \
 	${_libusb} \
 	${_libvgl} \
 	${_libvmmapi} \
+	${_libudis86} \
 	libwrap \
 	liby \
 	libz \
@@ -201,6 +202,7 @@ _librtld_db=	librtld_db
 
 .if ${MACHINE_CPUARCH} == "amd64"
 _libvmmapi=	libvmmapi
+_libudis86=	libudis86
 .endif
 
 .if ${MACHINE_CPUARCH} == "ia64"
